# ffplay0.1

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.59578d8  README.md  cache_manager.cpp  cache_manager.h  frame_allocator.cpp  frame_allocator.h  main.cpp  memory_manager.cpp  memory_manager.h  memory_pool.cpp  memory_pool.h  memory_tracker.cpp  memory_tracker.h  object_pool.cpp  object_pool.h  packet_recycler.cpp  packet_recycler.h  smart_pointers.cpp  smart_pointers.h
docs/: learning_roadmap.md
docs/technical/: memory_pool.md
src/media/: media_pipeline.h
src/media/allocator/: frame_allocator_base.h  frame_allocator_factory.cpp  frame_allocator_factory.h
src/media/allocator/ffmpeg_allocator/: ffmpeg_frame_allocator.cpp  ffmpeg_frame_allocator.h
src/media/converter/: video_convert.h
src/media/decoder/: video_decoder.h
src/media/demux/: demuxer.h
src/media/input/: file_input.cpp  file_input.h  input_source.cpp  input_source.h  rtsp_input.cpp  rtsp_input.h
src/memory/: cache_manager.cpp  cache_manager.h  frame_allocator.h  memory_manager.cpp  memory_manager.h  memory_pool.cpp  memory_pool.h  memory_tracker.cpp  memory_tracker.h  object_pool.cpp  object_pool.h  packet_recycler.cpp  packet_recycler.h  smart_pointers.h
src/utils/: network_detector.cpp  network_detector.h
tests/: CMakeLists.txt  main.cpp  test_main.cpp
tests/media/allocator/: test_ffmpeg_frame_allocator.cpp  test_ffmpeg_frame_allocator.h
tests/media/input/: test_input_source.cpp  test_input_source.h
tests/memory/: test_memory_pool.cpp  test_memory_pool.h  test_pool_performance.cpp  test_pool_performance.h
